- Update `SolutionNotebook.ipynb` to the final version - Add LogisticRegression_contrastive.pt - Update contrastive_learning_classification_report.py to train and evaluate the new LogisticRegression_contrastive.pt

--- a/SolutionNotebook.ipynb
+++ b/SolutionNotebook.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# add this to ignore warnings from Librosa\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "base = os.getcwd()"
@@ -1010,20 +1010,95 @@
      "output_type": "stream",
      "text": [
       "Using: 'cpu' as device for report.\n",
-      "------------------- Conv1dMelModel report -------------------\n"
+      "\n",
+      "Confusion matrix of train-set:\n",
+      " tensor([[ 51,   2,  69,  16,  16,   9,  25,   8,   0,   4],\n",
+      "        [  0,  30,  86,  20,  31,   4,  19,   2,   0,   8],\n",
+      "        [  2,   8, 109,  30,   4,   7,  25,  11,   0,   4],\n",
+      "        [  8,   7,  89,  34,   8,   6,  39,   5,   0,   4],\n",
+      "        [  4,   7, 105,  22,  32,   5,  19,   3,   1,   2],\n",
+      "        [  0,  17,  83,  22,  14,  20,  31,   3,   0,  10],\n",
+      "        [  0,   0,  22,  21,   0,   0, 139,  13,   5,   0],\n",
+      "        [  0,   7,  88,  13,  16,  15,  33,  26,   1,   1],\n",
+      "        [  0,  16,  32,  66,   0,   3,  42,   3,  36,   2],\n",
+      "        [  1,  34,  64,  11,  34,  11,  26,   2,   0,  17]])\n",
+      "\n",
+      "Classification report: train-set:\n",
+      " class   precision   recall   f1-score\n",
+      "     0      0.77       0.25       0.38       \n",
+      "     1      0.23       0.15       0.18       \n",
+      "     2      0.15       0.55       0.23       \n",
+      "     3      0.13       0.17       0.15       \n",
+      "     4      0.21       0.16       0.18       \n",
+      "     5      0.25       0.10       0.14       \n",
+      "     6      0.35       0.69       0.46       \n",
+      "     7      0.34       0.13       0.19       \n",
+      "     8      0.84       0.18       0.30       \n",
+      "     9      0.33       0.09       0.13       \n",
+      "\n",
+      "accuracy: 0.25\n",
+      "\n",
+      "\n",
+      "Confusion matrix of dev-set:\n",
+      " tensor([[ 1,  0, 31, 12,  1,  0,  1,  1,  0,  0],\n",
+      "        [ 0,  1, 32,  8,  0,  0,  4,  0,  0,  0],\n",
+      "        [ 0,  1, 24, 19,  1,  0,  1,  0,  0,  0],\n",
+      "        [ 0,  1, 27, 20,  1,  0,  5,  0,  0,  0],\n",
+      "        [ 0,  1, 41,  9,  3,  0,  0,  0,  0,  0],\n",
+      "        [ 0,  1, 34, 10,  3,  0,  2,  0,  0,  0],\n",
+      "        [ 0,  0, 24, 24,  0,  0,  6,  0,  0,  0],\n",
+      "        [ 0,  0, 36, 13,  2,  0,  2,  0,  0,  0],\n",
+      "        [ 0,  1, 16, 22,  2,  0,  3,  0,  0,  0],\n",
+      "        [ 0,  1, 39,  7,  0,  0,  3,  0,  0,  0]])\n",
+      "\n",
+      "Classification report: dev-set:\n",
+      " class   precision   recall   f1-score\n",
+      "     0      1.00       0.02       0.04       \n",
+      "     1      0.14       0.02       0.04       \n",
+      "     2      0.08       0.52       0.14       \n",
+      "     3      0.14       0.37       0.20       \n",
+      "     4      0.23       0.06       0.09       \n",
+      "     5      0.00       0.00       0.00       \n",
+      "     6      0.22       0.11       0.15       \n",
+      "     7      0.00       0.00       0.00       \n",
+      "     8      0.00       0.00       0.00       \n",
+      "     9      0.00       0.00       0.00       \n",
+      "\n",
+      "accuracy: 0.11\n",
+      "\n",
+      "\n",
+      "Confusion matrix of test-set:\n",
+      " tensor([[ 0,  0, 44,  8,  0,  0,  1,  0,  0,  0],\n",
+      "        [ 0,  0, 46,  8,  0,  0,  1,  0,  0,  0],\n",
+      "        [ 0,  1, 32, 18,  0,  0,  3,  0,  0,  0],\n",
+      "        [ 0,  0, 28, 16,  0,  0,  2,  0,  0,  0],\n",
+      "        [ 0,  1, 30, 14,  0,  0,  1,  0,  0,  0],\n",
+      "        [ 0,  0, 35, 13,  0,  0,  2,  0,  0,  0],\n",
+      "        [ 0,  0, 20, 18,  0,  0,  8,  0,  0,  0],\n",
+      "        [ 0,  0, 35,  7,  0,  0,  5,  0,  0,  0],\n",
+      "        [ 0,  0, 32, 19,  0,  0,  5,  0,  0,  0],\n",
+      "        [ 0,  0, 46,  2,  1,  0,  1,  0,  0,  0]])\n",
+      "\n",
+      "Classification report: test-set:\n",
+      " class   precision   recall   f1-score\n",
+      "     0      0.00       0.00       0.00       \n",
+      "     1      0.00       0.00       0.00       \n",
+      "     2      0.09       0.59       0.16       \n",
+      "     3      0.13       0.35       0.19       \n",
+      "     4      0.00       0.00       0.00       \n",
+      "     5      0.00       0.00       0.00       \n",
+      "     6      0.28       0.17       0.21       \n",
+      "     7      0.00       0.00       0.00       \n",
+      "     8      0.00       0.00       0.00       \n",
+      "     9      0.00       0.00       0.00       \n",
+      "\n",
+      "accuracy: 0.11\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# III.3\n",
-    "\n",
-    "\"\"\"\n",
-    "Answers to sub-questions:\n",
-    "\n",
-    "- TODO: Fill with answer to : \"Does this model improve over the model without contrastive learning?\"\n",
-    "\n",
-    "- Discuss your observations.\n",
-    "\"\"\"\n",
     "\n",
     "os.chdir(base + '/model_neural')\n",
     "%run 'contrastive_learning_classification_report.py'\n",
